Fix docs index page horizontal scroll

--- a/website/client/src/pages/styles.module.css
+++ b/website/client/src/pages/styles.module.css
@@ -65,6 +65,7 @@ header[data-section-header] {
 
 .features > [data-features-grid] {
   grid-row: 2;
+  margin: 0;
 }
 
 .features [data-feature-image] {
